Pull request #204: WDZO-1894: fix send custom settings in promoCampaignForm
Squashed commit of the following:

commit a0c69b0df43aa0bdcba8f43f51c4c6e67d107b5c
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 15 14:18:26 2021 +0300

    WDZO-1894: fix send custom settings in promoCampaignForm

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
@@ -5,6 +5,7 @@
 }
 
 .container :global(label.ant-form-item-required) {
+    display: flex;
     align-items: flex-start;
 }
 
